# blog

./: .gitignore  README.md  alle-gegenderten-formen-und-wie-man-sie-automatisiert-entfernen-kann.html  aller-gegenderten-formen-und-wie-man-sie-automatisiert-entfernen-kann.html  archives.html  authors.html  categories.html  developing-an-alexa-that-doesnt-suck.html  how-to-learn-czech.html  index.html  pelicanconf.py  publishconf.py  pyproject.toml  tags.html  uberblick-aller-gegenderten-formen-und-ob-man-sie-automatisiert-entfernen-kann.html
author/: vuizur.html
category/: chatbots.html  czech.html  deutsch.html  german-articles.html  language-learning.html
content/: alexa-that-doesnt-suck.md  gegenderte-formen-überblick.md  learn-czech.md
drafts/: developing-an-alexa-that-doesnt-suck.html
feeds/: all.atom.xml  chatbots.atom.xml  czech.atom.xml  deutsch.atom.xml  german-articles.atom.xml  language-learning.atom.xml
output/: archives.html  authors.html  categories.html  how-to-learn-czech.html  index.html  tags.html
output/author/: vuizur.html
output/category/: czech.html
tag/: czech.html  gendersprache.html  gpt-3.html  nlp.html  resources.html  stt.html  tts.html
